@@ -5,8 +5,8 @@ Author: Mathieu Ribatet [aut], Christophe Dutang [ctb]
 Maintainer: Christophe Dutang <christophe.dutang@ensimag.fr>
 Depends: R (>= 3.0.0)
 Description: Some functions useful to perform a Peak Over Threshold
-        analysis in univariate and bivariate cases. A user's guide is
-        available.
+        analysis in univariate and bivariate cases, see Beirlant et al. (2004)
+        <doi:10.1002/0470012382>. A user's guide is available.
 License: GPL (>= 2)
 URL: http://pot.r-forge.r-project.org/
 Repository: CRAN
